# PrimaMobile

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  privacy_policy_nash_store.txt  settings.gradle
app/: build.gradle  google-services.json  proguard-rules.pro
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/java/com/dinaraparanid/prima/utils/rustlibs/: Cargo.toml  NativeLibrary.java  com_dinaraparanid_prima_utils_rustlibs_NativeLibrary.h
app/src/main/java/com/dinaraparanid/prima/utils/rustlibs/prima_native/: Cargo.toml
app/src/main/java/com/dinaraparanid/prima/utils/rustlibs/prima_native/src/: lib.rs
app/src/main/java/com/dinaraparanid/prima/utils/rustlibs/src/: lib.rs
app/src/main/java/com/dinaraparanid/prima/utils/rustlibs/src/native_structs/: artist.rs  mod.rs  playlist.rs  track.rs
app/src/main/res/anim/: slide_down.xml  slide_in.xml  slide_out.xml  slide_up.xml
app/src/main/res/drawable/: bg_selector.xml  bottom_sheet_background.xml  divider.xml  email_icon.xml  github_icon.xml  marker_left.xml  question_icon.xml  settings_divider.xml  switch_track.xml  telegram_icon.xml  twitter_icon.xml  vk_icon.xml
app/src/main/res/drawable-land/: splash_screen.xml
app/src/main/res/font/: akronim.xml  alegreya_sc.xml  almendra.xml  amarante.xml  artifika.xml  atma.xml  calligraffitti.xml  caveat_bold.xml  changa_one.xml  droid_serif.xml  fira_sans_thin.xml  (+13 more)
databases/: music-database.db
databases/com.dinaraparanid.prima.database.MusicDatabase/: 1.json
gradle/wrapper/: gradle-wrapper.properties
(+1090 files in other folders)
