[package]
name = "prima_native"
version = "0.1.0"
edition = "2021"

[dependencies]
jni = "0.19.0"
genius_lyrics = "1.0.3"
track_album_number_genius = "1.0.2"
openssl = { version = "*", features = ["vendored"] }

[lib]
crate_type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"